# LAM-Codex_Agent

./: DEV_LOGS.md  IDENTITY.md  README.md  ROADMAP.md  SUBTREE_COMMAND_INTERPRETATION_PROTOCOL.md  SYSTEM_STATE.md  TEST_MIRROR_MATRIX_2026-02-17.md  WB01_LAM_CODEX_AGENT_ANALYSIS_2026-02-17.md  WORKFLOW_SNAPSHOT_STATE.md  flash_brain.py  pyproject.toml  pytest.ini  requirements.txt  run_tests_wsl.sh  start.py
.gateway/: routing_events.jsonl
.gemini/: GEMINI.md
.github/workflows/: ci.yml
LAM_Communication_Agent/docs/: AGENTS.md
chronolog/: STATE.md
contract/: ROUTING.md
data/import/: export  task_block_001.json
devkit/: IDENTITY.md
protocol/: IDENTITY.md
reqs/: requirements.txt
scripts/: test_entrypoint.sh
src/: main.py
src/agents/: Agent.md  MemoryCore.md  agent.py  com_agent.py  com_agent_stub.py  fix_agent.py  test_agent.py
src/codex_agent/: __init__.py  __main__.py  cli.py  core.py  feedback.py  gate.py
src/codex_agent/integrations/: com_agent_bridge.py
src/codex_agent/protocols/: agent_protocol.py  codex_protocol.py
src/core/: memory_core.py
src/interfaces/: com_agent_interface.py  fix_agent_interface.py  test_agent_interface.py
tests/: test_com_agent_bridge_queue.py  test_governance_artifacts.py  test_test_entrypoint_contract.py
tests/integration/: test_cli.py
tests/unit/: test_core.py  test_feedback.py
